cabal-version: 3.0
name:          juspay-extra
version:       1.2.1.1
synopsis:      Juspay extra stuff
description:
homepage:      https://github.com/juspay/euler-haskell-common
license:
author:        Juspay Technologies Pvt Ltd
maintainer:    ilia.rodionov@juspay.in
copyright:     (C) Juspay Technologies Pvt Ltd 2021
category:      Euler
build-type:    Simple
tested-with:   GHC ==8.8.4
             , GHC ==8.10.7

source-repository head
  type:     git
  location: https://github.com/juspay/euler-haskell-common

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Werror
    -fplugin=RecordDotPreprocessor

  build-depends:
    , base                     
    , record-dot-preprocessor 
    , exceptions
    , record-hasfield

  default-extensions:
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    OverloadedLabels
    OverloadedStrings
    TupleSections
    TypeApplications
    TypeFamilies
    TypeSynonymInstances
    UndecidableInstances

  default-language:   Haskell2010

library
  import:          common-lang
  exposed-modules:
    Juspay.Extra.Config
    Juspay.Extra.Control
    Juspay.Extra.Env
    Juspay.Extra.Json
    Juspay.Extra.List
    Juspay.Extra.NonEmptyText
    Juspay.Extra.Parsing
    Juspay.Extra.Secret
    Juspay.Extra.Text
    Juspay.Extra.Time
    Juspay.Extra.EnvConfig
    Juspay.Extra.AES

  build-depends:
    , aeson
    , bytestring
    , containers
    , criterion
    , deepseq
    , either
    , exceptions
    , extra
    , fin
    , http-api-data
    , http-media
    , nonempty-containers
    , nonempty-vector
    , optics-core
    , QuickCheck
    , random
    , reflection
    , servant                    
    , store
    , string-conversions
    , text
    , text-format
    , time
    , transformers
    , tree-diff
    , unordered-containers
    , validation-selective
    , vector
    , mtl
    , cryptonite
    , base64-bytestring

  hs-source-dirs:  src

common common-test
  import:        common-lang
  ghc-options:   -threaded -with-rtsopts=-N
  build-depends:
      juspay-extra
    , hedgehog
    , hspec
    , hspec-hedgehog
    , aeson
    , text
    , unordered-containers
    , time
    , vector
    , async
    , bytestring
    , universum
    , cryptonite
    , base64-bytestring

test-suite parsing
  import:         common-test
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:  nonempty-vector
  hs-source-dirs: test/parsing

test-suite env-test
  import:         common-test
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:  nonempty-vector
  hs-source-dirs: test/env

benchmark common-bench
  import: common-lang
  type: exitcode-stdio-1.0
  main-is: Bench.hs
  hs-source-dirs:
      benchmark
  build-depends:
        criterion
        , juspay-extra
        , random
  default-language: Haskell2010
